dfir_rs/tests/compile-fail-stable/surface_syntax_noarrow_indexing.rs
../compile-fail/surface_syntax_noarrow_indexing.rs